--- a/styles.css
+++ b/styles.css
@@ -9,26 +9,32 @@
     height: 80px;
     width: auto;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
     position: sticky;
+    justify-content: space-between;
     top: 0px;
 }
 
-.logo {
+/* .logo {
     width: 90px;
     text-align: center;
     align-content: center;
 
-}
+} */
 
-.logo img {
+/* .logo img {
     height: 100%;
     padding: 10px;
     margin-left: 10px;
+} */
+.nav {
+    /* margin-left: 20px; */
+    display: flex;
+    flex-wrap: nowrap;
 }
 
-.nav{
-    margin-left: 20px;
+.nav2 {
+    /* margin-left: 20px; */
     display: flex;
     flex-wrap: nowrap;
 }
@@ -38,30 +44,30 @@
     height: 60px;
     width: auto;
     margin: 10px;
-    float: left;
+
 }
 
-.btnnav{
+.btnnav {
     height: 100%;
     width: 100%;
-     border: 0px;
-     background-color: rgb(255, 255, 255);
-     font-weight: bold;
+    border: 0px;
+    background-color: rgb(255, 255, 255);
+    font-weight: bold;
 }
 
 .search {
-    flex-grow: 1;
+    /* flex-grow: 1; */
     display: flex;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     align-items: center;
-    margin-left: 50px;
+    /* margin-left: 50px; */
     flex-wrap: nowrap;
 }
 
 .search input[type="text"] {
-    
+
     padding: 6px;
-    margin-right: 10px;
+    /* margin-right: 10px; */
     border: none;
     font-size: 17px;
     border-radius: 4px;
@@ -76,6 +82,7 @@
     cursor: pointer;
     border-radius: 4px;
 }
+
 .search button i {
     font-size: 18px;
 }
@@ -84,15 +91,16 @@
     background: darkgreen;
     color: white;
 }
-.logo2{
-    margin-left: 20px;
+
+.logo2 {
+    /* margin-left: 20px; */
     display: flex;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     align-items: center;
     flex-wrap: nowrap;
 }
 
-.seconddiv{
+.seconddiv {
     /* height: 300px; */
     width: 100%;
     background-color: rgb(255, 255, 255);
@@ -102,12 +110,12 @@
     padding-bottom: 0px;
 }
 
-.thirddiv{
+.thirddiv {
     display: flex;
     width: 100%;
 }
 
-.maincard{
+.maincard {
     display: flex;
     padding-top: 40px;
     padding-left: 50px;
@@ -115,54 +123,56 @@
     padding-bottom: 0px;
     flex-wrap: wrap;
     justify-content: center;
- 
+
 }
 
-.photocard{
+.photocard {
     border-color: brown;
     border-style: solid;
     /* height: 300px; */
     width: 200px;
     background-color: aquamarine;
-    
+
     margin: 10px;
 
 }
-.photocard .pcimg{
+
+.photocard .pcimg {
     height: 200px;
     width: 100%;
     background-color: rgb(232 222 200);
     padding: 5px;
 }
 
-.pctext{
+.pctext {
 
     height: 100px;
     width: 100%;
-    background-color:rgb(232 222 200);
+    background-color: rgb(232 222 200);
     text-align: center;
     color: brown;
-    
+
 }
 
-.secondlast{
+.secondlast {
     margin-top: 40px;
     margin-bottom: 40px;
 }
 
-.footer{
+.footer {
     /* height: 400px; */
     display: flex;
     background-color: #FAFBFC;
 }
-.footblock{
-    
-   margin: 40px;
+
+.footblock {
+
+    margin: 40px;
     width: 25%;
     background-color: #FAFBFC;
 }
 
-.footer .footblock h4{
+.footer .footblock h4 {
     color: #696b79;
     display: block;
     font-size: 15px;
@@ -171,67 +181,71 @@
     cursor: pointer;
     line-height: normal;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
 
-#child1{
-    position:fixed;
-    bottom:25px;
-    right: 25px ;
+#child1 {
+    position: fixed;
+    bottom: 25px;
+    right: 25px;
     height: 50px;
     width: 50px;
     text-align: center;
-   border-radius: 50%;
-   align-content: center;
-   background-color: #1d85fc;
-   color: white;
-   
+    border-radius: 50%;
+    align-content: center;
+    background-color: #1d85fc;
+    color: white;
+
 }
 
-@media screen and (max-width:500px) {
-    .nav{
-        display: none;
-    }
-    .search{
+@media screen and (max-width:999px) {
+    .nav2 {
         display: none;
     }
 
-    .maincard{
+    .search {
+        display: none;
+    }
+
+    .maincard {
         display: flex;
         padding-top: 0px;
         padding-left: 0px;
         padding-right: 0px;
         padding-bottom: 0px;
-        
+
         justify-content: center;
         align-items: center;
-     
+
     }
-    .footblock{
-    
+
+    .footblock {
+
         margin: 40px;
-         width: 100%;
-         background-color: #FAFBFC;
-         text-align: center;
-     }
-    .footer{
+        width: 100%;
+        background-color: #FAFBFC;
+        text-align: center;
+    }
+
+    .footer {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
-  
-  
- 
+
+
+
 }
 
 @media screen and (max-width:1048px) {
-    .maincard{
+    .maincard {
         display: flex;
         flex-wrap: wrap;
     }
-  
+
 
 }
