--- a/finalpage.css
+++ b/finalpage.css
@@ -15,7 +15,7 @@
 .finalphotocard {
     width: 58%;
     background-color: rgb(255, 255, 255);
-    height: 700px;
+    /* height: 700px; */
     /* padding: 20px; */
     display: flex;
     justify-content: center;
@@ -25,6 +25,8 @@
 
 .finalphotocardin {
     margin: 10px;
+    width: 45%;
+    /* height: 45%; */
 }
 
 .details {
@@ -34,10 +36,7 @@
     padding: 10px;
 }
 
-.finalphotocardin {
-    /* height: 48%; */
-    width: 45%;
-}
+
 
 .details1 h1 {
     color: black !important;
