--- a/finalpage.css
+++ b/finalpage.css
@@ -18,6 +18,7 @@
     /* height: 700px; */
     /* padding: 20px; */
     display: flex;
+    align-content: flex-start;
     justify-content: center;
     flex-wrap: wrap;
 
