--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 .firstdiv {
     display: flex;
     height: 80px;
-    width: auto;
+    width: 100%;
     background-color: rgb(255, 255, 255);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
     position: sticky;
@@ -35,13 +35,13 @@
 .nav {
     /* margin-left: 20px; */
     display: flex;
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
 }
 
 .nav2 {
     /* margin-left: 20px; */
     display: flex;
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
 }
 
 .navbuttons {
@@ -66,7 +66,7 @@
     /* justify-content: flex-start; */
     align-items: center;
     /* margin-left: 50px; */
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
 }
 
 .search input[type="text"] {
@@ -102,7 +102,7 @@
     display: flex;
     /* justify-content: flex-end; */
     align-items: center;
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
 }
 
 .seconddiv {
